[package]
name = "evm-init"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.31", features = ["derive"] }
revm = { version = "19.5.0", features = ["serde"] }
rmp = "0.8.14"
rmp-serde = "1.3.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
reth-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.1.5", default-features = false }
alloy = { version = "0.9.2", features = ["eips", "consensus", "rpc-types", "network", "genesis", "rlp"] }
